index/css/base.css
/* ... */
.chat-modal-container {
    display: flex;
    padding: 15px;
}

.chat-room {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    min-height: 65px;
    width: 65px;
    border-radius: 50%;
    border: 2px solid transparent;
    font-size: 12px;
    font-weight: bold;
    margin: 10px 10px;
}

.chat-room:hover {
    cursor: pointer;
    font-size: 14px;
}

.chat-open-btn:hover {
    cursor: pointer;
}

.select-chat-room {
    font-size: 25px;
}

.chat-room span {
    margin: 5px;
    max-width: 60px;
    max-height: 20px;
    overflow: hidden;
}

.chat-room-alert-effect {
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: rgb(255, 60, 0);
    margin-top: -60px;
    margin-right: 40px;
    display: none;
}

.chat-rooms-container {
    display: flex;
    width: 90px;
    flex-direction: column;
    align-items: center;
    background-color: #FCFCFC;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    border-right: 3px solid #e5ffd6;
    overflow-y: auto;
    overflow-x: hidden;
    height: 100%;
}

.chat-rooms-container::-webkit-scrollbar {
    display: none;
}

.chat-area-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #FCFCFC;
    border-top-right-radius: 20px;
}

.chat-area-container span {
    font-weight: bold;
    font-size: large;
    margin: 10px 0;
}

.chat-area-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 380px;
    height: 100%;
    overflow-x: hidden;
}

.chat-area-wrap::-webkit-scrollbar {
    width: 8px;
}

.chat-area-wrap::-webkit-scrollbar-thumb {
    background-color: rgb(180, 180, 180);
    border-radius: 20px;
}

.chat-area-wrap::-webkit-scrollbar-track {
    background-color: transparent;
}

.chat-area-wrap::-webkit-scrollbar-thumb:hover {
    background-color: rgb(146, 146, 146);
    overflow-y: hidden;
}

.chat-area-wrap {
    width: 100%;
    overflow-x: hidden;
    overflow-y: auto;
}

.chat-area-wrap::-webkit-scrollbar {
    width: 8px;
}

.chat-area-wrap::-webkit-scrollbar-thumb {
    background-color: rgb(180, 180, 180);
    border-radius: 20px;
}

.chat-area-wrap::-webkit-scrollbar-track {
    background-color: transparent;
}

.chat-area-wrap::-webkit-scrollbar-thumb:hover {
    background-color: rgb(146, 146, 146);
}

.contract-btn-container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-bottom: solid 3px #e5ffd6;
}

.request-contract-btn {
    background-color: rgb(153, 250, 158);
    font-size: 15px;
    font-weight: bold;
    border: 0;
    border-radius: 7px;
    height: 40px;
    width: 340px;
    margin: 0px 6px 10px 6px;
}

.end-contract-btn {
    background-color: #ffe398;
    font-size: 15px;
    font-weight: bold;
    border: 0;
    border-radius: 7px;
    height: 40px;
    width: 340px;
    margin: 0px 6px 10px 6px;
}

.request-contract-btn:hover {
    cursor: pointer;
    background-color: rgb(191, 255, 194);
}

.end-contract-btn:hover {
    cursor: pointer;
    background-color: #ffefc2;
}

.chat-send-container {
    display: flex;
    border-radius: 10px;
    width: 100%;
    bottom: 0;
}

.chat-text {
    width: 100%;
    border: none;
    resize: none;
    font-size: 16px;
    background-color: #F5F5F5;
    height: 32px;
    max-height: 110px;
    padding: 10px 5px 0 5px;
    overflow-y: auto;
}

.chat-send-btn {
    font-size: 15px;
    font-weight: bold;
    border: 0;
    width: 50px;
    background-color: #ffe398;
}

.chat-send-btn:hover {
    cursor: pointer;
    background-color: #F8FFA4;
}

.chat-text:focus {
    outline: none;
}

.my-chat-wrap {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
}

.other-chat-wrap {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
}

.my-chat {
    background-color: #FFEAA1;
    font-size: 15px;
    font-weight: bold;
    border: 0;
    border-radius: 7px;
    border-bottom-right-radius: 0px;
    max-width: 260px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 5px;
    padding: 5px;
}

.other-chat {
    background-color: #EDEDED;
    font-size: 15px;
    font-weight: bold;
    border: 0;
    border-radius: 7px;
    border-bottom-left-radius: 0px;
    max-width: 260px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 5px 10px;
    padding: 5px;
    word-wrap: break-word;
}

.contract-wrap {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contract-look {
    background-color: rgb(153, 250, 158);
    font-size: 15px;
    font-weight: bold;
    border: 0;
    border-radius: 7px;
    height: 40px;
    width: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 5px;
}

.contract-look:hover {
    cursor: pointer;
    background-color: rgb(191, 255, 194);
}

#chat-submit-btn {
    transform: scale(1.3);
    font-variation-settings:
        'FILL'0,
        'wght'500,
        'GRAD'0,
        'opsz'48
}

.nickname {
    overflow-wrap: break-word;
}

.chat-time-stamp {
    font-size: 12px;
    margin-bottom: 3px;
}

.date-wrap{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px;
}

.chat-date-stamp {
    font-size: 12px;
    font-weight: bold;
    border: 2px solid rgb(212, 212, 212);
    border-radius: 10px;
    padding: 0 5px;
    margin-left: 3px;
}
@media screen and (max-width: 770px) {

}
/* ... */

